--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular-devkit/build-angular": "^16.2.0",
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
+    "@schematics/angular": "^17.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/uuid": "^9.0.6",
     "jasmine-core": "~4.6.0",
