--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/assets/jsons/sala.json"
+              "src/assets/jsons/sala.json",
+              "src/assets/jsons/teacher.json"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
