--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "dependencies": {
     "@angular/animations": "^17.0.3",
     "@angular/cdk": "^17.0.0",
-    "@angular/common": "^17.0.3",
-    "@angular/compiler": "^17.0.3",
-    "@angular/core": "^17.0.3",
+    "@angular/common": "^17.3.0",
+    "@angular/compiler": "^17.3.0",
+    "@angular/core": "^17.3.0",
     "@angular/forms": "^17.0.3",
     "@angular/material": "^17.0.0",
-    "@angular/platform-browser": "^17.0.3",
-    "@angular/platform-browser-dynamic": "^17.0.3",
+    "@angular/platform-browser": "^17.3.0",
+    "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.0.3",
     "moment": "^2.29.4",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "zone.js": "~0.14.2"
