--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.0.3",
+    "@syncfusion/ej2": "^25.1.38",
+    "@syncfusion/ej2-angular-grids": "^25.1.38",
     "moment": "^2.29.4",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
