--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.0.3",
     "@syncfusion/ej2": "^25.1.38",
     "@syncfusion/ej2-angular-grids": "^25.1.38",
+    "date-fns": "^3.6.0",
     "moment": "^2.29.4",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
