--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.0.3",
     "@syncfusion/ej2": "^25.1.38",
     "@syncfusion/ej2-angular-grids": "^25.1.38",
+    "angular-calendar": "^0.31.1",
     "date-fns": "^3.6.0",
     "moment": "^2.29.4",
     "rxjs": "^7.8.1",
@@ -34,6 +35,7 @@
     "@angular/cli": "~17.0.0",
     "@angular/compiler-cli": "^17.0.3",
     "@schematics/angular": "^17.0.0",
+    "@types/date-fns": "^2.6.0",
     "@types/jasmine": "~4.3.0",
     "@types/uuid": "^9.0.6",
     "jasmine-core": "~4.6.0",
