--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@syncfusion/ej2-angular-grids": "^25.1.38",
     "angular-calendar": "^0.31.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "moment": "^2.29.4",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
