--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-calendar": "^0.31.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
+    "heimdall": "file:",
     "moment": "^2.29.4",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
