--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.0.3",
+    "@auth0/angular-jwt": "^5.2.0",
     "@syncfusion/ej2": "^25.1.38",
     "@syncfusion/ej2-angular-grids": "^25.1.38",
     "angular-calendar": "^0.31.1",
