--- a/package.json
+++ b/package.json
@@ -25,12 +25,18 @@
     "@syncfusion/ej2-angular-grids": "^25.1.38",
     "angular-calendar": "^0.31.1",
     "date-fns": "^3.6.0",
-    "date-fns-tz": "^3.1.3",
+    "date-fns-tz": "^3.2.0",
     "heimdall": "file:",
-    "moment": "^2.29.4",
+    "http-proxy-middleware": "^3.0.3",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
+    "undici": "^6.21.0",
     "uuid": "^9.0.1",
+    "vite": "^5.4.11",
+    "webpack": "^5.96.1",
+    "webpack-dev-middleware": "^7.4.2",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
