--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "rxjs": "^7.8.1",
+    "selenium-webdriver": "^4.26.0",
     "tslib": "^2.3.0",
     "undici": "^6.21.0",
     "uuid": "^9.0.1",
