--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "rxjs": "^7.8.1",
-    "selenium-webdriver": "^4.26.0",
     "tslib": "^2.3.0",
     "undici": "^6.21.0",
     "uuid": "^9.0.1",
@@ -47,13 +46,18 @@
     "@schematics/angular": "^17.0.0",
     "@types/date-fns": "^2.6.0",
     "@types/jasmine": "~4.3.0",
+    "@types/selenium-webdriver": "^4.1.27",
     "@types/uuid": "^9.0.6",
+    "chromedriver": "^131.0.0",
     "jasmine-core": "~4.6.0",
+    "jest": "^29.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "karma-spec-reporter": "^0.0.36",
+    "selenium-webdriver": "^4.26.0",
     "typescript": "~5.2.2"
   }
 }
